--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>George - EAST HOME</title>
-        <link rel="stylesheet" href="/www/home.css">
+        <link rel="stylesheet" href="/home.css">
     </head>
     <body>
         <h1>Gene George East</h1>
