--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     </head>
     <body>
         <h1>Gene George East</h1>
-        <h4>Welcome to the Gene George East page!</h4>
-        <p>We're happy your here! Please choose an action to do.</p>
+        <h5>Welcome to the Gene George East page!</h5>
+        <p>We're happy your here! Please choose an action to do. Open applications, Message Gene George East directer, Ms. Pickel, or go to George Home Page. Please choose.</p>
+        <div id="actions">
+            <a href="/message.html"><img src="/Images/Message.png"></a>
+            <a href="/apps.html"><img src="/Images/Open Applications.png"></a>
+            <a href="https://george.sdale.org/"><img src="/Images/Goto Home Page.png"></a>
+        </div>
     </body>
 </html>
